# openapi.json
@@ -2074,6 +2074,17 @@
       },
       "AdminUpdateUserRequest": {
         "properties": {
+          "username": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Username"
+          },
           "email": {
             "anyOf": [
               {
